Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -528,7 +528,8 @@
     <!-- Header Fixo -->
     <header class="header-fixo">
       <div class="logo-selo-bandeira-row">
-        <img src="logo_atual.png" alt="Logo" class="logo-fixa">
+        <img src="logo_pulvion.png" alt="Logo Pulvion" class="logo-fixa">
+        <img src="logo_topgun.png" alt="Logo Top Gun" class="logo-fixa">
         <div class="flag-lock">
           <img src="https://flagcdn.com/w40/br.png" alt="Bandeira do Brasil" class="bandeira">
           <button type="button" class="lock-btn" id="lockButton" aria-label="Acesso restrito">
@@ -567,7 +568,7 @@
         <div class="container">
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-6">
-                    <h1 class="display-4 fw-bold mb-4">Bem-vindo ao Ano Novo Top Gun 2026</h1>
+                    <h1 class="display-4 fw-bold mb-4">Bem-vindo ao Ano Novo 2026</h1>
                                         <p class="lead mb-4">Entramos em um novo ciclo com energia renovada: precisao aerea, seguranca e inovacao para acelerar sua producao neste Ano Novo. Conte conosco para transformar planejamento em resultados e celebrar colheitas ainda maiores em 2026.</p>
                 </div>
                 
@@ -745,7 +746,7 @@
         <div class="container">
             <div class="row text-center mb-5">
                 <div class="col-lg-8 mx-auto">
-                    <h2 class="display-5 fw-bold mb-3">Boas-vindas a 2026 com a Top Gun</h2>
+                    <h2 class="display-5 fw-bold mb-3">Boas-vindas a 2026!!</h2>
                     <p class="lead text-muted">Seguimos entregando precisão, segurança e tecnologia aérea para que seu planejamento de 2026 seja ainda mais produtivo.</p>
                 </div>
             </div>
@@ -927,8 +928,8 @@
             notification.className = `notification alert alert-${getBootstrapClass(type)} alert-dismissible fade show`;
             notification.style.cssText = `
                 position: fixed;
-                top: 20px;
-                right: 20px;
+                bottom: 24px;
+                right: 24px;
                 z-index: 9999;
                 min-width: 300px;
                 box-shadow: 0 4px 12px rgba(0,0,0,0.15);
@@ -1110,7 +1111,7 @@
             });
 
             setTimeout(() => {
-                showNotification('Boas-vindas a 2026 com a Top Gun! Vamos decolar juntos.', 'info');
+                showNotification('Boas-vindas a 2026! Vamos decolar juntos.', 'info');
             }, 1000);
         });
 
