--- a/index.html
+++ b/index.html
@@ -494,11 +494,11 @@
                               <h3 class="h5 fw-bold mb-0">Ranking de Aplicação</h3>
                             </div>
                             <div class="small-muted mt-1">
-                              Últimos <strong>7 dias</strong> (atualiza automaticamente)
+                              <span id="rkPeriodPrefix">Últimos</span> <strong id="rkPeriodLabel">7 dias</strong> (atualiza automaticamente)
                             </div>
                           </div>
                           <span class="badge rounded-pill px-3 py-2">
-                            <i class="bi bi-calendar-week me-1"></i> 7D
+                            <i class="bi bi-calendar-week me-1"></i> <span id="rkBadgeText">7D</span>
                           </span>
                         </div>
 
@@ -520,9 +520,51 @@
                         <div class="mt-3 text-start">
                           <div class="d-flex align-items-center justify-content-between">
                             <div class="small-muted">Top pilotos</div>
-                            <button class="btn btn-sm btn-outline-light" id="rkRefreshBtn" type="button" style="border-color: rgba(217,178,76,0.45);">
-                              <i class="bi bi-arrow-clockwise me-1"></i> Atualizar
-                            </button>
+
+                            <div class="d-flex align-items-center gap-2">
+                              <select id="rkPeriod" class="form-select form-select-sm"
+                                style="width:auto; background:#0f1628; color:#f5f5f5; border:1px solid rgba(217,178,76,0.35);">
+                                <option value="7" selected>7 dias</option>
+                                <option value="15">15 dias</option>
+                                <option value="30">30 dias</option>
+                                <option value="60">60 dias</option>
+                                <option value="90">90 dias</option>
+                                <option value="all">Tudo</option>
+                                <option value="custom">Período (datas)</option>
+                              </select>
+
+                              <button class="btn btn-sm btn-outline-light" id="rkToggleFilterBtn" type="button" style="border-color: rgba(217,178,76,0.45);">
+                                <i class="bi bi-funnel me-1"></i> Filtro
+                              </button>
+
+                              <button class="btn btn-sm btn-outline-light" id="rkRefreshBtn" type="button" style="border-color: rgba(217,178,76,0.45);">
+                                <i class="bi bi-arrow-clockwise me-1"></i> Atualizar
+                              </button>
+                            </div>
+                          </div>
+
+                          <div id="rkFilterRow" class="mt-2" style="display:none;">
+                            <div class="row g-2">
+                              <div class="col-6">
+                                <input id="rkDateFrom" type="date" class="form-control form-control-sm" />
+                              </div>
+                              <div class="col-6">
+                                <input id="rkDateTo" type="date" class="form-control form-control-sm" />
+                              </div>
+                            </div>
+
+                            <div class="d-flex gap-2 mt-2">
+                              <button class="btn btn-sm btn-outline-light" id="rkApplyRange" type="button" style="border-color: rgba(217,178,76,0.45);">
+                                Aplicar
+                              </button>
+                              <button class="btn btn-sm btn-outline-light" id="rkClearRange" type="button" style="border-color: rgba(217,178,76,0.35); opacity:.85;">
+                                Limpar
+                              </button>
+                            </div>
+
+                            <div class="small-muted mt-2" id="rkRangeHint" style="opacity:.9;">
+                              Dica: selecione “Período (datas)” para filtrar por Data inicial/final.
+                            </div>
                           </div>
 
                           <div id="rkLoading" class="mt-2">
@@ -909,11 +951,11 @@
           }
         }
 
-        async function fetchRanking7d() {
+        async function fetchRanking() {
           showRankingLoading(true);
 
           try {
-            const url = `${GAS_URL}?action=getRanking&periodDays=7`;
+            const url = buildRankingUrl_();
             const data = await loadJsonp(url);
 
             // GAS retorna array ou {ok:false,message:"..."}
@@ -977,9 +1019,53 @@
             showRankingLoading(false);
           } catch (err) {
             console.error(err);
-            showRankingError("Falha ao carregar ranking (7 dias).");
+            showRankingError("Falha ao carregar ranking.");
           }
         }
+
+        // Estado do filtro do ranking (padrão: últimos 7 dias)
+        const rkState = {
+          mode: "period",      // "period" | "range"
+          periodDays: "7",      // "7", "15", "30", "60", "90", "all"
+          dateFrom: "",         // "YYYY-MM-DD"
+          dateTo: ""            // "YYYY-MM-DD"
+        };
+
+        function buildRankingUrl_() {
+          const qs = new URLSearchParams();
+          qs.set("action", "getRanking");
+
+          if (rkState.mode === "range" && (rkState.dateFrom || rkState.dateTo)) {
+            if (rkState.dateFrom) qs.set("dateFrom", rkState.dateFrom);
+            if (rkState.dateTo) qs.set("dateTo", rkState.dateTo);
+          } else {
+            qs.set("periodDays", rkState.periodDays || "7");
+          }
+
+          return `${GAS_URL}?${qs.toString()}`;
+        }
+
+        function updateRankingPeriodUI_() {
+          const prefixEl = document.getElementById("rkPeriodPrefix");
+          const labelEl = document.getElementById("rkPeriodLabel");
+          const badgeEl = document.getElementById("rkBadgeText");
+
+          if (!prefixEl || !labelEl || !badgeEl) return;
+
+          if (rkState.mode === "range" && (rkState.dateFrom || rkState.dateTo)) {
+            prefixEl.textContent = "Período";
+            const a = rkState.dateFrom ? rkState.dateFrom.split("-").reverse().join("/") : "—";
+            const b = rkState.dateTo ? rkState.dateTo.split("-").reverse().join("/") : "—";
+            labelEl.textContent = `${a} a ${b}`;
+            badgeEl.textContent = "DATA";
+          } else {
+            prefixEl.textContent = "Últimos";
+            const p = rkState.periodDays || "7";
+            labelEl.textContent = (p === "all") ? "tudo" : `${p} dias`;
+            badgeEl.textContent = (p === "all") ? "ALL" : `${p}D`;
+          }
+        }
+
 
         function debugInfo() {
             console.log('Pagina carregada com sucesso!');
@@ -1033,11 +1119,75 @@
             }, 1000);
 
             // Carrega ranking 7D automático
-            fetchRanking7d();
+            fetchRanking();
+
+                        // Carrega ranking automático (padrão: últimos 7 dias)
+            updateRankingPeriodUI_();
+            fetchRanking();
 
             // Botão atualizar ranking
             const btn = document.getElementById("rkRefreshBtn");
-            if (btn) btn.addEventListener("click", fetchRanking7d);
+            if (btn) btn.addEventListener("click", fetchRanking);
+
+            // Controles de filtro
+            const sel = document.getElementById("rkPeriod");
+            const toggle = document.getElementById("rkToggleFilterBtn");
+            const filterRow = document.getElementById("rkFilterRow");
+            const inFrom = document.getElementById("rkDateFrom");
+            const inTo = document.getElementById("rkDateTo");
+            const btnApply = document.getElementById("rkApplyRange");
+            const btnClear = document.getElementById("rkClearRange");
+
+            if (toggle && filterRow) {
+              toggle.addEventListener("click", () => {
+                filterRow.style.display = (filterRow.style.display === "none" || !filterRow.style.display) ? "block" : "none";
+              });
+            }
+
+            if (sel) {
+              sel.addEventListener("change", () => {
+                const v = sel.value || "7";
+                if (v === "custom") {
+                  rkState.mode = "range";
+                  // abre a área de datas pra pessoa escolher
+                  if (filterRow) filterRow.style.display = "block";
+                } else {
+                  rkState.mode = "period";
+                  rkState.periodDays = v;
+                  rkState.dateFrom = "";
+                  rkState.dateTo = "";
+                  if (inFrom) inFrom.value = "";
+                  if (inTo) inTo.value = "";
+                  updateRankingPeriodUI_();
+                  fetchRanking();
+                }
+              });
+            }
+
+            if (btnApply) {
+              btnApply.addEventListener("click", () => {
+                rkState.mode = "range";
+                rkState.dateFrom = (inFrom && inFrom.value) ? inFrom.value : "";
+                rkState.dateTo = (inTo && inTo.value) ? inTo.value : "";
+                updateRankingPeriodUI_();
+                fetchRanking();
+              });
+            }
+
+            if (btnClear) {
+              btnClear.addEventListener("click", () => {
+                rkState.mode = "period";
+                rkState.periodDays = "7";
+                rkState.dateFrom = "";
+                rkState.dateTo = "";
+                if (sel) sel.value = "7";
+                if (inFrom) inFrom.value = "";
+                if (inTo) inTo.value = "";
+                if (filterRow) filterRow.style.display = "none";
+                updateRankingPeriodUI_();
+                fetchRanking();
+              });
+            }
 
             debugInfo();
         });
@@ -1064,3 +1214,4 @@
     </script>
 </body>
 </html>
+
