--- a/painel_admin.html
+++ b/painel_admin.html
@@ -453,17 +453,25 @@
         <div class="nav-group">
           <button class="nav-main" data-group="kml">
             <i class="nav-icon" data-lucide="folder-kanban"></i>
-            <span class="label">Arquivos KML</span>
+            <span class="label">Upload Arquivos</span>
             <i class="nav-icon chevron" data-lucide="chevron-down"></i>
           </button>
           <div class="nav-sub" data-group="kml">
             <button class="nav-link" data-src="upload.kml.html" data-label="Página de Upload">
               <i class="nav-icon" data-lucide="upload-cloud"></i>
-              <span class="label">Página de Upload</span>
+              <span class="label">Upload KML/MAPAS</span>
             </button>
             <button class="nav-link" data-src="enc_kml_uplo.html" data-label="Buscar KML">
               <i class="nav-icon" data-lucide="search"></i>
-              <span class="label">Buscar KML</span>
+              <span class="label">Busca KML/MAPA</span>
+            </button>
+            <button class="nav-link" data-src="ranking/index.ranking.html" data-label="Upload Ranking">
+              <i class="nav-icon" data-lucide="upload"></i>
+              <span class="label">Upload Ranking</span>
+            </button>
+            <button class="nav-link" data-src="ranking/ranking.piloto.html" data-label="Ranking Pilotos">
+              <i class="nav-icon" data-lucide="trophy"></i>
+              <span class="label">Ranking Pilotos</span>
             </button>
           </div>
         </div>
@@ -486,6 +494,28 @@
             <button class="nav-link" data-src="gerar_pontos.html" data-label="Gerar Pontos">
               <i class="nav-icon" data-lucide="map-pin"></i>
               <span class="label">Gerar Pontos</span>
+            </button>
+          </div>
+        </div>
+
+        <div class="nav-group">
+          <button class="nav-main" data-group="relatorios">
+            <i class="nav-icon" data-lucide="line-chart"></i>
+            <span class="label">Relatórios</span>
+            <i class="nav-icon chevron" data-lucide="chevron-down"></i>
+          </button>
+          <div class="nav-sub" data-group="relatorios">
+            <button class="nav-link" data-src="relatorios_cotesia.html" data-label="Cotésia">
+              <i class="nav-icon" data-lucide="map-pin"></i>
+              <span class="label">Cotésia</span>
+            </button>
+            <button class="nav-link" data-src="relatorios_pulverizacao.html" data-label="Pulverização">
+              <i class="nav-icon" data-lucide="spray-can"></i>
+              <span class="label">Pulverização</span>
+            </button>
+            <button class="nav-link" data-src="relatorios_trichogramma.html" data-label="Trichogramma">
+              <i class="nav-icon" data-lucide="leaf"></i>
+              <span class="label">Trichogramma</span>
             </button>
           </div>
         </div>
@@ -868,6 +898,7 @@
   </script>
 </body>
 </html>
+
 
 
 
