--- a/painel_admin.html
+++ b/painel_admin.html
@@ -465,11 +465,11 @@
               <i class="nav-icon" data-lucide="search"></i>
               <span class="label">Busca KML/MAPA</span>
             </button>
-            <button class="nav-link" data-src="ranking/index.ranking.html" data-label="Upload Ranking">
+            <button class="nav-link" data-src="index.ranking.html" data-label="Upload Ranking">
               <i class="nav-icon" data-lucide="upload"></i>
               <span class="label">Upload Ranking</span>
             </button>
-            <button class="nav-link" data-src="ranking/ranking.piloto.html" data-label="Ranking Pilotos">
+            <button class="nav-link" data-src="ranking.piloto.html" data-label="Ranking Pilotos">
               <i class="nav-icon" data-lucide="trophy"></i>
               <span class="label">Ranking Pilotos</span>
             </button>
@@ -898,6 +898,7 @@
   </script>
 </body>
 </html>
+
 
 
 
